--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     </head>
     <body>
         <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
+        <h1> hello world h1 </h1>
     </body>
 </html>
